# steve

./: .gist-registry.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage.json  fix_frontmatter_strict.py  index.json  pyproject.toml  ruff.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: general.md  python.md
conductor/tracks/standardization_audit_20251224/: metadata.json  plan.md  spec.md
cookbooks/: automatic-context-compaction.ipynb  batch_processing.ipynb  building_evals.ipynb  generate_test_cases.ipynb  orchestrator_workers.ipynb
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  COMPONENT_CATALOG.md  COMPONENT_DISCOVERY.md  COMPONENT_RELATIONSHIPS.md  CONTRIBUTING.md  DEVELOPMENT.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  INSTALLATION.md  MIGRATION.md  PUBLISHING.md  SCRIPTS_REFERENCE.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md  USING_AGENTS.md  USING_COMMANDS.md  USING_HOOKS.md  USING_SKILLS.md
examples/hooks/: LOGGING.md  claude_hooks.py  hook_logging.py  hooks_config.yaml  my-first-hook.py  test_hook_logging.py  validate-code.sh
examples/hooks/analyzers/: check_any_changed.py  check_comment_replacement.py  check_unused_parameters.py  complexity_checker.py  (+12 more)
scripts/: README.md  add_metadata.py  audit.py  batch_add_metadata.py  build_index.py  build_index_benchmark.py  coverage.py  detect_secrets.py  fix_agent_metadata.py  fix_command_metadata.py  fix_frontmatter.py  fix_hook_metadata.py  health.py  install_component.py  install_from_gist.py  lint.py  list_components.py  publish_all.py  publish_registry.py  publish_to_gist.py  python_to_markdown.py  requirements.txt  stale.py  utils.py
scripts/tests/: test_add_metadata.py  test_build_index.py  test_detect_secrets.py  test_install_component.py  test_install_from_gist.py  test_list_components.py  test_publish_registry.py  test_publish_to_gist.py  test_python_to_markdown.py
steve/agents/: README.md
steve/commands/: README.md
steve/helpers/: __init__.py  agent_state_snapshot.py  build_projects_dataset.py  context-monitor.py  context_monitor.py  debug_rotation.py  extract_tool_calls.py  generate_readme.py  health-check.sh  history_archival.py  projects_dataset.py  projects_extract.py  projects_to_art.py  search-components.sh  test_agent_state_snapshot.py  test_projects_dataset.py  test_projects_extract.py  train_lisa.py  validate-components.sh
steve/hooks/: README.md  hook_logging.md  hook_logging.py  hooks_config.yaml  test_hook_logging.md  test_hook_logging.py
steve/prompts/: elaborate_example_metaprompt.md
steve/rules/: general.md  html.md  json.md  markdown.md  python.md  shell.md  toml.md  typescript.md  yaml.md
steve/skills/: README.md
steve/templates/: AGENT_SKILL.template.md  API_DOCUMENTATION.template.md  ARCHITECTURE_DECISION_RECORD.template.md  CHANGELOG.template.md  CLAUDE_HOOK.template.md  CODE_ANALYSIS.template.md  COMPETITIVE_ANALYSIS.template.md  DAILY_STANDUP.template.md  DEPENDENCY_AUDIT.template.md  DESIGN_SPEC.template.md  GIT_COMMIT.template.md  INCIDENT_POSTMORTEM.template.md  MIGRATION_GUIDE.template.md  ONBOARDING_GUIDE.template.md  PERFORMANCE_ANALYSIS.template.md  PULL_REQUEST.template.md  REFACTORING_PLAN.template.md  RESEARCH_REPORT.template.md  RETROSPECTIVE.template.md  RUNBOOK.template.md  SECURITY_AUDIT.template.md  SLASH_COMMAND.template.md  SUBAGENT.template.md  TECHNICAL_SPIKE.template.md  TESTING_REPORT.template.md  TODO_LIST.template.md  UV_SCRIPT.template.py
(+441 files in other folders)
